Clean up client update transaction flow